@@ -2,6 +2,8 @@ Revision history for Perl extension lib::root
 
 {{$NEXT}}
 
+    - update doc with default .libroot file and list similar projects
+
 0.01 2024-03-30T17:26:22Z
 
     - initial version
